<resources>
  <string name="app_name">Desk Request</string>
  <string name="title_activity_splash">SplashActivity</string>
  <string name="title_activity_welcome">Desk Request - Welcome</string>
  <string name="title_activity_options">Choose Booking Option</string>
  <string name="title_activity_login">Log In to DeskRequest</string>
  <string name="title_activity_settings">Settings</string>
  <string name="title_activity_bookings">Booking Details</string>
  <string name="title_activity_roombookings">Room Booking Details</string>
  <string name="title_activity_meet_details">Meeting Room Details</string>
  <string name="title_activity_conf_details">Conf Room Details</string>
  <string name="activity_welcome_continue">Continue -></string>
  <string name="activity_welcome_text">Choose a Date</string>
  <string name="activity_book_options_conf">View Conference/Meeting Room</string>
  <string name="activity_book_options_desk">View Offices</string>
  <string name="activity_book_options_all">Show All</string>
  <string name="activity_room_list">Select a Room</string>
  <string name="activity_office_list">Available Offices</string>
  <string name="activity_meetconf_list">Meeting/Conference Rooms</string>
  <string name="activity_desk_list">Available Desks</string>
  <string name="activity_desk_details">Desk Details</string>
  <string name="activity_booking_details">Booking Details</string>
  <string name="activity_room_booking_details">Room Booking Details</string>
  <string name="activity_conf_details">Conf Room Details</string>
  <string name="activity_meet_details">Meeting Room Details</string>
  <string name="activity_bookings">Your Bookings</string>
  <string name="activity_settings">Settings</string>
  <string name="activity_room_bookings">Your Room Bookings</string>
  <string name="button_book_desk">Book This Desk</string>
  <string name="button_book_room">Book This Room</string>
  <string name="hint_desknumber">Desk Number</string>
  <string name="menu_bookdesk">Book</string>
  <string name="menu_room">Room Bookings</string>
  <string name="menu_bookings">Bookings</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_logout">Logout</string>
  <string name="select_pm"><![CDATA[12pm to 4pm]]></string>
  <string name="select_am"><![CDATA[8am to 12pm]]></string>
  <string name="select_half"><![CDATA[Half Day]]></string>
  <string name="select_full"><![CDATA[Full Day]]></string>
  <string name="activity_desk_deskdetails"><U>Desk Details</U></string>
  <string name="activity_desk_deskno"><U>Desk No:</U></string>
  <string name="activity_chair_type"><U>Chair Type:</U></string>
  <string name="activity_chair_size"><U>Chair Size:</U></string>
  <string name="activity_comp_os"><U>Computer OS:</U></string>
  <string name="activity_mon_size"><U>Monitor Size:</U></string>
  <string name="activity_mon_res"><U>Monitor Res:</U></string>
  <string name="activity_doc_model"><U>Docking Station:</U></string>
  <string name="activity_phone_number"><U>Phone Number:</U></string>
  <string name="activity_phone_dd"><U>Direct Dial:</U></string>
  <string name="activity_book_ref"><U>Reference No :</U></string>
  <string name="activity_book_date"><U>Date Booked :</U></string>
  <string name="activity_book_duration"><U>Duration :</U></string>
  <string name="activity_book_ref_hint"><U>Reference No</U></string>
  <string name="activity_book_date_hint"><U>Date Booked</U></string>
  <string name="activity_book_duration_hint"><U>Duration</U></string>
  <string name="invalid_username">Not a valid username</string>
  <string name="invalid_password">Password must be >5 characters</string>
  <string name="login_failed">"Login failed"</string>
  <string name="empty_login">"Please complete both all fields"</string>
  <string name="email_invalid">"Email Not Registered"</string>
  <string name="password_invalid">"Password Not Recognised"</string>
  <string name="edit_settings">"Edit User Settings"</string>
  <string name="prompt_firstname">First Name</string>
  <string name="prompt_lastname">Last Name</string>
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="prompt_confirm_password">Confirm Password</string>
  <string name="action_sign_in">Log In</string>
  <string name="action_sign_up">Sign Up</string>
  <string name="action_submit">Submit</string>
  <string name="action_update_email">Update Email</string>
  <string name="action_update_password">Update Password</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="action_cancel">Cancel</string>
  <string name="activity_roombooking_roomName"><U>Room Name:</U></string>
</resources>