<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.deskrequest.views.settings.SettingsView">

  <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorPrimary"
      android:fitsSystemWindows="true"
      app:elevation="0dip"
      app:layout_constraintTop_toTopOf="parent"
      app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/colorPrimary" />

  </com.google.android.material.appbar.AppBarLayout>

  <EditText
      android:id="@+id/edit_email"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="108dp"
      android:layout_marginEnd="24dp"
      android:hint="@string/prompt_email"
      android:inputType="textEmailAddress"
      android:selectAllOnFocus="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/edit_password"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="64dp"
      android:layout_marginEnd="24dp"
      android:hint="@string/prompt_password"
      android:imeActionLabel="@string/action_sign_in_short"
      android:imeOptions="actionDone"
      android:inputType="textPassword"
      android:selectAllOnFocus="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/edit_email" />

  <EditText
      android:id="@+id/confirm_password"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="64dp"
      android:layout_marginEnd="24dp"
      android:hint="@string/prompt_confirm_password"
      android:imeActionLabel="@string/action_sign_in_short"
      android:imeOptions="actionDone"
      android:inputType="textPassword"
      android:selectAllOnFocus="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/edit_password" />

  <Button
      android:id="@+id/updateEmail"
      android:layout_width="175dp"
      android:layout_height="wrap_content"
      android:layout_gravity="start"
      android:layout_marginStart="48dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="48dp"
      android:layout_marginBottom="64dp"
      android:enabled="true"
      android:text="@string/action_update_email"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.503"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/confirm_password"
      app:layout_constraintVertical_bias="0.131" />

  <Button
      android:id="@+id/updatePassword"
      android:layout_width="175dp"
      android:layout_height="wrap_content"
      android:layout_gravity="start"
      android:layout_marginStart="48dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="48dp"
      android:layout_marginBottom="32dp"
      android:enabled="true"
      android:text="@string/action_update_password"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.503"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/updateEmail"
      app:layout_constraintVertical_bias="0.134" />

  <Button
      android:id="@+id/cancel"
      android:layout_width="175dp"
      android:layout_height="wrap_content"
      android:layout_gravity="start"
      android:layout_marginStart="48dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="48dp"
      android:layout_marginBottom="64dp"
      android:enabled="true"
      android:text="@string/action_cancel"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.503"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/updatePassword"
      app:layout_constraintVertical_bias="0.122" />

  <com.google.android.material.bottomnavigation.BottomNavigationView
      android:id="@+id/bottomNavSettings"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_gravity="bottom"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:background="@color/colorBotNav"
      app:itemIconTint="@color/colorBotNavText"
      app:itemTextColor="@color/colorBotNavText"
      android:visibility="visible"
      app:labelVisibilityMode="labeled"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:menu="@menu/menu_main_bottom"
      tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>