<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="org.wit.deskrequest.views.desk.DeskView">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      tools:layout_editor_absoluteX="-16dp">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

      <androidx.appcompat.widget.Toolbar
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:titleTextColor="@color/colorText" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/appBarLayout"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="-11dp">

      <Button
          android:id="@+id/bookUpdate"
          android:layout_width="349dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="80dp"
          android:layout_marginEnd="8dp"
          android:background="@color/colorPrimaryDark"
          android:paddingTop="8dp"
          android:paddingBottom="8dp"
          android:text="Update Booking"
          android:textColor="@color/colorText"
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/changeDuration" />

      <Button
          android:id="@+id/bookCancel"
          android:layout_width="349dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="32dp"
          android:layout_marginEnd="8dp"
          android:background="@color/colorPrimaryDark"
          android:paddingTop="8dp"
          android:paddingBottom="8dp"
          android:text="Cancel Booking"
          android:textColor="@color/colorText"
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/book_duration" />

      <TextView
          android:id="@+id/deskInfo"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="60dp"
          android:autofillHints=""
          android:gravity="center_horizontal"
          android:maxLength="25"
          android:maxLines="1"
          android:padding="8dp"
          android:text="@string/activity_booking_details"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="25sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/deskNo"
          android:layout_width="200dp"
          android:layout_height="40dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="5dp"
          android:autofillHints=""
          android:maxLength="25"
          android:maxLines="1"
          android:padding="8dp"
          android:text="@string/activity_desk_deskno"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="20sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/deskInfo" />

      <TextView
          android:id="@+id/bookDeskNoField"
          android:layout_width="200dp"
          android:layout_height="40dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="5dp"
          android:autofillHints=""
          android:hint="@string/activity_desk_deskno"
          android:maxLength="25"
          android:maxLines="1"
          android:padding="8dp"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="15sp"
          app:layout_constraintStart_toEndOf="@id/deskNo"
          app:layout_constraintTop_toBottomOf="@id/deskInfo" />

      <TextView
          android:id="@+id/bookRef"
          android:layout_width="200dp"
          android:layout_height="40dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="5dp"
          android:autofillHints=""
          android:maxLength="25"
          android:maxLines="1"
          android:padding="8dp"
          android:text="@string/activity_book_ref"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="20sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/deskNo" />

      <TextView
          android:id="@+id/bookRefField"
          android:layout_width="200dp"
          android:layout_height="40dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="5dp"
          android:autofillHints=""
          android:maxLength="25"
          android:maxLines="1"
          android:padding="8dp"
          android:hint="@string/activity_book_ref_hint"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="15sp"
          app:layout_constraintStart_toEndOf="@id/bookRef"
          app:layout_constraintTop_toBottomOf="@id/deskNo" />

      <TextView
          android:id="@+id/book_date"
          android:layout_width="200dp"
          android:layout_height="40dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="5dp"
          android:autofillHints=""
          android:text="@string/activity_book_date"
          android:maxLength="25"
          android:maxLines="1"
          android:padding="8dp"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="20sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/bookRef" />

      <TextView
          android:id="@+id/bookDateField"
          android:layout_width="200dp"
          android:layout_height="40dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="5dp"
          android:autofillHints=""
          android:hint="@string/activity_book_date_hint"
          android:maxLength="25"
          android:maxLines="1"
          android:padding="8dp"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="15sp"
          app:layout_constraintStart_toEndOf="@id/book_date"
          app:layout_constraintTop_toBottomOf="@id/bookRefField" />

      <TextView
          android:id="@+id/book_duration"
          android:layout_width="200dp"
          android:layout_height="40dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="5dp"
          android:autofillHints=""
          android:maxLength="25"
          android:maxLines="1"
          android:padding="8dp"
          android:text="@string/activity_book_duration"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="20sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/book_date" />

      <TextView
          android:id="@+id/bookdurField"
          android:layout_width="200dp"
          android:layout_height="40dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="5dp"
          android:autofillHints=""
          android:hint="@string/activity_book_duration_hint"
          android:maxLength="25"
          android:maxLines="1"
          android:padding="8dp"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="15sp"
          app:layout_constraintStart_toEndOf="@id/book_duration"
          app:layout_constraintTop_toBottomOf="@id/bookDateField" />

      <TextView
          android:id="@+id/changeDuration"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="60dp"
          android:autofillHints=""
          android:gravity="center_horizontal"
          android:maxLength="25"
          android:maxLines="1"
          android:padding="8dp"
          android:text="Change Booking Duration"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="25sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@id/bookCancel" />

      <RadioGroup
          android:id="@+id/duration_rg"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:orientation="vertical"
          android:textSize="15sp"
          app:layout_constraintStart_toEndOf="@id/book_duration"
          app:layout_constraintTop_toBottomOf="@id/changeDuration">

        <RadioButton
            android:id="@+id/duration_am"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_am"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/duration_pm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_pm"
            android:textSize="15sp" />
      </RadioGroup>

      <RadioGroup
          android:id="@+id/duration_rg2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:orientation="vertical"
          android:textSize="15sp"
          app:layout_constraintTop_toBottomOf="@id/changeDuration">

        <RadioButton
            android:id="@+id/duration_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_full"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/duration_half"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_half"
            android:textSize="15sp" />
      </RadioGroup>

      <ImageView
          android:id="@+id/deskrequestImage"
          android:layout_width="0dp"
          android:layout_height="100dp"
          android:layout_marginStart="4dp"
          android:layout_marginTop="24dp"
          android:layout_marginEnd="5dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.503"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/bookUpdate"
          app:srcCompat="@mipmap/ic_launcher" />


    </androidx.constraintlayout.widget.ConstraintLayout>


  </RelativeLayout>

  <com.google.android.material.bottomnavigation.BottomNavigationView
      android:id="@+id/bottomNav"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_gravity="bottom"
      android:background="@color/colorBotNav"
      app:itemIconTint="@color/colorBotNavText"
      app:itemTextColor="@color/colorBotNavText"
      android:visibility="visible"
      app:labelVisibilityMode="labeled"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:menu="@menu/menu_main_bottom"
      tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>